Fixed background flicker on initial load
Still have the tiniest flicker of buttons on load/refresh but that is more complex... CSS rules will stay because I'll try to revisit this later. For now, this is much better. Refreshing makes a flicker on light mode because of the standard settings. May have to research more or consult someone on these more complex flicker issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,26 @@ a,
     --hover-fill: var(--yellow);
 }
 
+button,
+.home-link-wrapper,
+.header-right {
+  visibility: hidden;
+}
+
+.theme-ready button,
+.theme-ready .home-link-wrapper,
+.theme-ready .header-right {
+  visibility: visible;
+}
+
+.dark button {
+    color: var(--white);
+}
+
+.light button {
+    color: var(--dark-blue);
+}
+
 .light .pop-up-box {
     background-color: var(--dark-blue);
     color: var(--white);
